updated to add search by level
