# HskApi/bin/Release/net6.0/swagger.json
@@ -5,10 +5,10 @@
     "version": "1.0"
   },
   "paths": {
-    "/api/TodoItems": {
+    "/api/HskDetails": {
       "get": {
         "tags": [
-          "TodoItems"
+          "HskDetails"
         ],
         "produces": [
           "text/plain",
@@ -21,49 +21,17 @@
             "schema": {
               "type": "array",
               "items": {
-                "$ref": "#/definitions/TodoItem"
+                "$ref": "#/definitions/HskDetails"
               }
-            }
-          }
-        }
-      },
-      "post": {
-        "tags": [
-          "TodoItems"
-        ],
-        "consumes": [
-          "application/json",
-          "text/json",
-          "application/*+json"
-        ],
-        "produces": [
-          "text/plain",
-          "application/json",
-          "text/json"
-        ],
-        "parameters": [
-          {
-            "in": "body",
-            "name": "body",
-            "schema": {
-              "$ref": "#/definitions/TodoItem"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Success",
-            "schema": {
-              "$ref": "#/definitions/TodoItem"
             }
           }
         }
       }
     },
-    "/api/TodoItems/{id}": {
+    "/api/HskDetails/{id}": {
       "get": {
         "tags": [
-          "TodoItems"
+          "HskDetails"
         ],
         "produces": [
           "text/plain",
@@ -76,65 +44,47 @@
             "name": "id",
             "required": true,
             "type": "integer",
-            "format": "int64"
+            "format": "int32"
           }
         ],
         "responses": {
           "200": {
             "description": "Success",
             "schema": {
-              "$ref": "#/definitions/TodoItem"
+              "$ref": "#/definitions/HskDetails"
             }
           }
         }
-      },
-      "put": {
+      }
+    },
+    "/api/HskDetails/HskByLevel/{level}": {
+      "get": {
         "tags": [
-          "TodoItems"
+          "HskDetails"
         ],
-        "consumes": [
+        "produces": [
+          "text/plain",
           "application/json",
-          "text/json",
-          "application/*+json"
+          "text/json"
         ],
         "parameters": [
           {
             "in": "path",
-            "name": "id",
+            "name": "level",
             "required": true,
             "type": "integer",
-            "format": "int64"
-          },
-          {
-            "in": "body",
-            "name": "body",
+            "format": "int32"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success",
             "schema": {
-              "$ref": "#/definitions/TodoItem"
+              "type": "array",
+              "items": {
+                "$ref": "#/definitions/HskDetails"
+              }
             }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Success"
-          }
-        }
-      },
-      "delete": {
-        "tags": [
-          "TodoItems"
-        ],
-        "parameters": [
-          {
-            "in": "path",
-            "name": "id",
-            "required": true,
-            "type": "integer",
-            "format": "int64"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Success"
           }
         }
       }
@@ -164,20 +114,29 @@
     }
   },
   "definitions": {
-    "TodoItem": {
+    "HskDetails": {
       "type": "object",
       "properties": {
         "id": {
-          "format": "int64",
+          "format": "int32",
           "type": "integer"
         },
-        "name": {
+        "hanzi": {
           "type": "string"
         },
-        "isComplete": {
-          "type": "boolean"
+        "pinyin": {
+          "type": "string"
         },
-        "test1": {
+        "translation1": {
+          "type": "string"
+        },
+        "translation2": {
+          "type": "string"
+        },
+        "translation3": {
+          "type": "string"
+        },
+        "hskLevel": {
           "format": "int32",
           "type": "integer"
         }
